# packout_local_slint

./: Cargo.toml  README.md  build.rs  package_room.db
src/: lib.rs  main.rs  nfc_reader.rs
ui/: app-window.slint  material.slint
ui/components/: card.slint  search_bar.slint  segmented_button.slint
ui/styling/: material_palette.slint  material_schemes.slint  material_style_metrics.slint
